--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
       <div class="col-lg-9">
         <div id="today" class="mt-3"></div>
-        <div id="forecast" class="mt-3"></div>
+          <!--Current day forecast here-->
+
+        <div id="forecast" class="mt-3 flex">
+          <!--5 day forecast here-->
       </div>
     </div>
   </div>
